# cardano-cli-batch-tx-gen

./: .gitignore  README.md  cardano-cli-batch-tx-gen.cabal  run-api-batcher.sh  run-batcher-file.sh  run-file-batcher.sh
resources/: datasource-sample.csv  datasource.csv  dist-testnet.csv  new-addr
runtime/: batched-tx.sh  execute-transaction.sh  signing-key.skey
src/: APIBasedTxBatcher.hs  FileBasedTxBatcher.hs  Properties.hs  SimpleTxBatcher.hs  TransactionProperties.hs
