cabal-version:      3.6
name:               cardano-cli-batch-tx-gen
version:            0.1.0.0
synopsis:           A batch tx generator for cardano-cli

author:             lambdac
maintainer:         lambdac

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -Wno-missing-signatures
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas


library
    import: lang
    hs-source-dirs: src
    main-is: src/FileBasedTxBatcher.hs
    exposed-modules:
     FileBasedTxBatcher,
     APIBasedTxBatcher,
     Properties,
     Types
    build-depends:
     aeson,
     base >= 4.9,
     bytestring,
     containers,
     MissingH,
     hex,
     http-conduit,
     split >= 0.2,
     time >= 1.9

executable file-tx-batcher
    import: lang
    main-is: FileBasedTxBatcher.hs
    ghc-options: -main-is FileBasedTxBatcher
    hs-source-dirs: src
    other-modules:
     Properties,
     Types
    build-depends:
     aeson,
     base >= 4.9,
     bytestring,
     containers,
     MissingH,
     hex,
     http-conduit,
     split >= 0.2,
     time >= 1.9

executable api-tx-batcher
    import: lang
    main-is: APIBasedTxBatcher.hs
    ghc-options: -main-is APIBasedTxBatcher
    hs-source-dirs: src
    other-modules:
     Properties,
     Types
    build-depends:
     aeson,
     base >= 4.9,
     bytestring,
     containers,
     MissingH,
     hex,
     http-conduit,
     split >= 0.2,
     time >= 1.9